// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BDCButton Normal 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button>
    Default Text
  </button>
</section>
`;

exports[`Storyshots BDCCopyright Desktop 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span>
    © 
    2020
     
    <span
      class="small"
    >
      BDC
    </span>
     
    <span
      class="large"
    >
      Binghamton Design Collective
    </span>
  </span>
</section>
`;

exports[`Storyshots BDCCopyright Normal 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span>
    © 
    2020
     
    <span
      class="small"
    >
      BDC
    </span>
     
    <span
      class="large"
    >
      Binghamton Design Collective
    </span>
  </span>
</section>
`;

exports[`Storyshots Footer Desktop 1`] = `
<section
  class="storybook-snapshot-container"
>
  <footer>
    <section>
      <button>
        Positive
      </button>
       
      <button>
        Neutral
      </button>
       
      <button>
        Negative
      </button>
    </section>
     
    <span>
      © 2020 Binghamton Design Collective
    </span>
  </footer>
</section>
`;
